examples/test/testpolicy10715.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10715
  namespace: namespace373
spec:
  podSelector:
    matchLabels:
      key23: value28
      key40: value44
      key42: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value18
          key9: value2
          key27: value20
